[v2.0.0.0] Update descriptions and bump version
A major bump, as both the means of animation as well as the parameters have changed, making this very incompatible with the older version.

--- a/addons/autoscroll_container/plugin.cfg
+++ b/addons/autoscroll_container/plugin.cfg
@@ -1,9 +1,7 @@
 [plugin]
 
 name = "AutoScrollContainer"
-description = "A ScrollContainer that automatically scrolls a specified amount after a specified
-amount of time passes with no caught input (to this specific controll).
-Enabling or disabling this plugin does nothing."
+description = "A ScrollContainer that automatically scrolls itself, with multiple configurations for the type of scrolling animation, timing, and the ability to pause and resume."
 author = "NovaDC"
-version = "1.0.0.0"
+version = "v2.0.0.0"
 script = "plugin.gd"
